--- a/app/views/caseaccess/pages/SSCS-a.html
+++ b/app/views/caseaccess/pages/SSCS-a.html
@@ -26,7 +26,7 @@ Case details
   <div class="" style="display: flex; justify-content: space-between; ">
 
     <div>
-      <h1 class="govuk-heading-xl">9872574867365860</h1>
+      <h1 class="govuk-heading-xl">8771-7857-4127-5065</h1>
     </div>
 
 
@@ -195,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   9872574867365860
+                   8771-7857-4127-5065
                  </dd>
 
                </div>
@@ -207,7 +207,7 @@ Case details
                    Appellant
                  </dt>
                  <dd class="govuk-summary-list__value">
-                    Joanna Burns
+                    Ali Uddin
                  </dd>
 
                </div>
@@ -231,7 +231,7 @@ Case details
                    Nationalities
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   Swedish
+                   Pushtan
                  </dd>
 
                </div>
