--- a/app/views/caseaccess/pages/SSCS-confirmation.html
+++ b/app/views/caseaccess/pages/SSCS-confirmation.html
@@ -17,7 +17,7 @@ Case details
           action="PA-00321-2018-request">
       {{ govukPanel({
         titleText: "Access successful",
-        html: "Case reference:<br><strong>9872574867365860</strong>"
+        html: "Case reference:<br><strong>8771-7857-4127-5065</strong>"
       }) }}
   <!--    <p class="govuk-body">We have sent you a confirmation email.</p>
 -->
