--- a/app/views/caseaccess/pages/SSCS.html
+++ b/app/views/caseaccess/pages/SSCS.html
@@ -27,7 +27,7 @@ Case details
     <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
         <div style="display: flex; ">
       <div class="" style="display: flex; justify-content: space-between; ">
-        <h1 class="govuk-heading-xl">9872574867365860</h1>
+        <h1 class="govuk-heading-xl">8771-7857-4127-5065</h1>
         </div>
         </div>
         </div>
@@ -38,7 +38,7 @@ Case details
         Case name
         </dt>
         <dd class="govuk-summary-list__value">
-        Joanna Burns
+        Ali Uddin
         </dd>
         </div>
         <div class="govuk-summary-list__row">
@@ -54,7 +54,7 @@ Case details
         State
         </dt>
         <dd class="govuk-summary-list__value">
-        Awaiting Evidence
+        Submitted
         </dd>
         </div>
         <div class="govuk-summary-list__row">
