--- a/app/views/caseaccess/pages/SSCSs-atc.html
+++ b/app/views/caseaccess/pages/SSCSs-atc.html
@@ -26,7 +26,7 @@ Case details
 
 
     <div>
-      <h1 class="govuk-heading-xl">8574173860385729</h1>
+      <h1 class="govuk-heading-xl">8771-7857-4127-5065</h1>
     </div>
 
 
@@ -195,7 +195,7 @@ Case details
                    Appeal reference
                  </dt>
                  <dd class="govuk-summary-list__value">
-                   8574173860385729
+                   8771-7857-4127-5065
 
                  </dd>
 
