--- a/app/views/caseaccess/pages/SSCSs.html
+++ b/app/views/caseaccess/pages/SSCSs.html
@@ -27,7 +27,7 @@ This case requires specific access.<br>This means it’s outside your jurisdicti
       <div class="" style="display: flex; justify-content: space-between; ">
         <div style="display: flex; ">
 
-          <h1 class="govuk-heading-xl">8574173860385729</h1>
+          <h1 class="govuk-heading-xl">8771-7857-4127-5065</h1>
         </div>
       </div>
     </div>
