--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -822,7 +822,7 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin <br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lincoln County Court and Family Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bexleyheath Social Security & Child Support Tribunal</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/SSCS">Challenged access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
@@ -849,7 +849,7 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support <br><span style="font-size: 16px; color:#505a5f;">0263-1083-0905-7938</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin v Jane Bolton<br><span style="font-size: 16px; color:#505a5f;">0263-1083-0905-7938</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Civil Money Claims</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Evidence received</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Magistrates' Court and Family Court</td>
