fixes for scenario 5

--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -821,7 +821,7 @@ Case details
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin <br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Supplementary response</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Submitted</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Bexleyheath Social Security & Child Support Tribunal</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/SSCS">Challenged access</a></td>
                     </tr>
@@ -830,7 +830,7 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Civil Money Claims</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Evidence received</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Magistrates' Court and Family Court</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="#">Specific access</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -842,24 +842,24 @@ Case details
             {% elif  data.results == 'sscstask6'   %}
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Appeal received</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Tribunal Hearing Centre</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin v Jane Bolton<br><span style="font-size: 16px; color:#505a5f;">0263-1083-0905-7938</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi v Paul Patel<br><span style="font-size: 16px; color:#505a5f;">0263-1083-0905-7938</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Civil Money Claims</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Evidence received</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Magistrates' Court and Family Court</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailssscs">View</a></td>
                     </tr>
                     <tr class="govuk-table__row">
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin v Paul Patel<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Civil Money Claims</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House Tribunal Hearing Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi<br><span style="font-size: 16px; color:#505a5f;">8771-7857-4127-5065</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Family Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Awaiting Evidence</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Family Court</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/SSCSs">Specific access</a></td>
                     </tr>
                 </tbody>
