--- a/app/views/caseaccess/pages/SSCSs.html
+++ b/app/views/caseaccess/pages/SSCSs.html
@@ -46,7 +46,7 @@ This case requires specific access.<br>This means it’s outside your jurisdicti
           Service
         </dt>
         <dd class="govuk-summary-list__value">
-            Family Public Law
+            Immigration and Asylum
         </dd>
       </div>
       <div class="govuk-summary-list__row">
