--- a/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-gr.html
@@ -60,7 +60,7 @@ My work
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/SSCSs-atc"><strong>Lorenzo Hanoi</strong></a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Family Public Law</strong></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14/04/2021</strong></td>
                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Specific access</strong></td>
