--- a/app/views/caseaccess/pages/myaccess-SSCSs-p.html
+++ b/app/views/caseaccess/pages/myaccess-SSCSs-p.html
@@ -60,7 +60,7 @@ My work
             <tbody class="govuk-table__body">
               <tr class="govuk-table__row">
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Lorenzo Hanoi</td>
-              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family Public Law</td>
+              <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14/04/202</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific access</td>
