--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -33,14 +33,13 @@
 
             <div style="width: 350px;">
                 <h2 class="govuk-heading-s">Immigration and Asylum</h2>
-                <p>Task 1</p>
-                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Task 2</a></p>
-                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Task 3</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 1</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 2</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 3</a></p>
                 <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Task 4</a></p>
-                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Task 5</a></p>
-                <p>Task 6</p>
-                <p><a  target="_blank"  href="/searchcases/pages/results?results=iactask7&">Task 7</a></p>
-                <p><a  target="_blank"  href="/caseaccess/pages/available-tasks-IAC-s2">Task 8</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&&family=5&">Task 5</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&&family=6&">Task 6</a></p>
+                <p><a  target="_blank"  href="/caseaccess/pages/available-tasks-SSCS-s2?usertype=staff&">Task 7</a></p>
             </div>
 
         </div>
