--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -60,7 +60,123 @@ Case details
             </tbody>
         </table>
 
-        {% elif  data.results == 'iactask3'   %}
+
+
+        {% elif  data.results == 'family1'   %}
+                <!-- One result -->
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">City and County of Swansea v Jones<br><span style="font-size: 16px; color:#505a5f;">4321-7285-0685-8694 </span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case Management</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Swansea Civil Justice Centre</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=4321728506858694&">View</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+        {% elif  data.results == 'family2'   %}
+            <!-- One result -->
+                <tbody class="govuk-table__body">
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jessippi<br><span style="font-size: 16px; color:#505a5f;">7001-4009-8375-7687</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Awaiting Evidence</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400983757687&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jones<br><span style="font-size: 16px; color:#505a5f;">7001-4009-7755-2546</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Final hearing</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Combined Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400977552546&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jenkins<br><span style="font-size: 16px; color:#505a5f;">7001-4009-9876-5567</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Tribunal Hearing </td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400998765567&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jaxon<br><span style="font-size: 16px; color:#505a5f;">7001-4009-6655-4657</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case Management</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Family Court </td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400966554657&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Emma Sharpe vs Tomas Jones Whitehead<br><span style="font-size: 16px; color:#505a5f;">7001-4009-0001-2121</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Final Hearing</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Family Court </td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400900012121&">View</a></td>
+                    </tr>
+                    <tr class="govuk-table__row">
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jameson<br><span style="font-size: 16px; color:#505a5f;">7001-4009-0001-2349</span></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case Management</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Family Court</td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400900012349&">View</a></td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+            {% elif  data.results == 'family5'   %}
+                    <!-- One result -->
+                    <tbody class="govuk-table__body">
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns v Herald Jones<br><span style="font-size: 16px; color:#505a5f;">9001-8009-5555-4321</span></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Awaiting evidence</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Watford Family Court</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400983757687&">View</a></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns <br><span style="font-size: 16px; color:#505a5f;">5554-9988-6789-3322</span></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public law</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Watford Family Court</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="https://xui-prototype.herokuapp.com/caseaccess/pages/IAC?usertype=staff&">Challenged access </a></td>
+                        </tr>
+                        <tr class="govuk-table__row">
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns<br><span style="font-size: 16px; color:#505a5f;">5554-9988-6789-3322</span></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public law</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Tribunal Hearing </td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IAC?usertype=staff&">Challenged access </a></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                {% elif  data.results == 'family6'   %}
+                        <!-- One result -->
+                        <tbody class="govuk-table__body">
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">City and County of Swansea v Uddin<br><span style="font-size: 16px; color:#505a5f;">9001-8009-5555-4321</span></td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Final Hearing</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Central Family Court </td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400983757687&">View</a></td>
+                            </tr>
+                            <tr class="govuk-table__row">
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Ali Uddin  <br><span style="font-size: 16px; color:#505a5f;">4321-4567-9876-6789</span></td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case under review</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IACs?usertype=staff&">Specific access </a></td>
+                            </tr>
+                        </tbody>
+                    </table>
+
+
+
+
+{% elif  data.results == 'iactask3'   %}
             <!-- One result -->
                 <tbody class="govuk-table__body">
                     <tr class="govuk-table__row">
