--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -37,8 +37,8 @@
                 <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 2</a></p>
                 <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 3</a></p>
                 <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&">Task 4</a></p>
-                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&&family=5&">Task 5</a></p>
-                <p><a  target="_blank"  href="/searchcases/pages/startsearch?usertype=staff&&family=6&">Task 6</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/results?usertype=staff&results=family5&">Task 5</a></p>
+                <p><a  target="_blank"  href="/searchcases/pages/results?usertype=staff&results=family6&">Task 6</a></p>
                 <p><a  target="_blank"  href="/caseaccess/pages/available-tasks-SSCS-s2?usertype=staff&">Task 7</a></p>
             </div>
 
