updates for testing for users

--- a/app/views/searchcases/pages/results.html
+++ b/app/views/searchcases/pages/results.html
@@ -84,21 +84,21 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Awaiting Evidence</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400983757687&">View</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IACs?usertype=staff&">Specific access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jones<br><span style="font-size: 16px; color:#505a5f;">7001-4009-7755-2546</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Final hearing</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Basildon Combined Court</td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400977552546&">View</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IACs?usertype=staff&">Specific access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jenkins<br><span style="font-size: 16px; color:#505a5f;">7001-4009-9876-5567</span></td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Social Security and Child Support</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Tribunal Hearing </td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400998765567&">View</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IACs?usertype=staff&">Specific access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jaxon<br><span style="font-size: 16px; color:#505a5f;">7001-4009-6655-4657</span></td>
@@ -112,7 +112,7 @@ Case details
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public Law</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Final Hearing</td>
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Manchester Family Court </td>
-                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400900012121&">View</a></td>
+                        <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="#">Challenge access</a></td>
                     </tr>
                     <tr class="govuk-table__row">
                         <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Tom Jameson<br><span style="font-size: 16px; color:#505a5f;">7001-4009-0001-2349</span></td>
@@ -129,6 +129,7 @@ Case details
             {% elif  data.results == 'family5'   %}
                     <!-- One result -->
                     <tbody class="govuk-table__body">
+                        <!--
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns v Herald Jones<br><span style="font-size: 16px; color:#505a5f;">9001-8009-5555-4321</span></td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Divorce</td>
@@ -136,19 +137,20 @@ Case details
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Watford Family Court</td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/searchcases/pages/casedetailsfamily?casereference=7001400983757687&">View</a></td>
                         </tr>
+                        -->
                         <tr class="govuk-table__row">
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns <br><span style="font-size: 16px; color:#505a5f;">5554-9988-6789-3322</span></td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public law</td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Watford Family Court</td>
-                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="https://xui-prototype.herokuapp.com/caseaccess/pages/IAC?usertype=staff&">Challenged access </a></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IAC?usertype=staff&">Challenged access </a></td>
                         </tr>
                         <tr class="govuk-table__row">
-                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns<br><span style="font-size: 16px; color:#505a5f;">5554-9988-6789-3322</span></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Joanna Burns<br><span style="font-size: 16px; color:#505a5f;">7876-4566-7889-0990</span></td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Public law</td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Case submitted</td>
                             <td class="govuk-table__cell govuk-body govuk-!-font-size-19">East London Tribunal Hearing </td>
-                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="/caseaccess/pages/IAC?usertype=staff&">Challenged access </a></td>
+                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="text-align: right"><a href="#">View </a></td>
                         </tr>
                     </tbody>
                 </table>
