fix t label for testing

--- a/app/views/searchcases/index.html
+++ b/app/views/searchcases/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div style="width: 350px;">
-                <h2 class="govuk-heading-s">Immigration and Asylum</h2>
+                <h2 class="govuk-heading-s">Family</h2>
                 <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 1</a></p>
                 <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 2</a></p>
                 <p><a  target="_blank"  href="/searchcases/pages/available-tasks-sscs-testing?usertype=staff&">Task 3</a></p>
