--- a/app/views/caseaccess/pages/SSCS-ta.html
+++ b/app/views/caseaccess/pages/SSCS-ta.html
@@ -18,7 +18,7 @@ You've assigned yourself a task.
 <div class="govuk-grid-row" style="width:1220px; margin-left: 0px;">
   <div class="" style="display: flex; justify-content: space-between; ">
     <div>
-      <h1 class="govuk-heading-xl">PA/00467/2017</h1>
+      <h1 class="govuk-heading-xl">1234123412341234</h1>
     </div>
     <div style="display: flex; align-items:right">
       <p class="govuk-!-margin-top-2">Next step &nbsp;</p>
