--- a/app/views/caseaccess/pages/SSCS-tr-case.html
+++ b/app/views/caseaccess/pages/SSCS-tr-case.html
@@ -30,7 +30,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Arnold McKeever<br>Senior tribunal caseworker - Public Law</td>
+                <td class="govuk-table__cell">Arnold McKeever<br>Senior tribunal caseworker - Immigration and Asylum</td>
               </tr>
 <!--
               <tr class="govuk-table__row">
