--- a/app/views/caseaccess/pages/IAC-tr-case.html
+++ b/app/views/caseaccess/pages/IAC-tr-case.html
@@ -22,7 +22,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Case reference</th>
-                <td class="govuk-table__cell">PA/00467/2017</td>
+                <td class="govuk-table__cell">1234123412341234</td>
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Date submitted</th>
@@ -30,7 +30,7 @@ Case details
               </tr>
               <tr class="govuk-table__row">
                 <th scope="row" class="govuk-table__header" style="width: 220px;">Request from</th>
-                <td class="govuk-table__cell">Arnold McKeever<br>Senior tribunal caseworker - Public Law</td>
+                <td class="govuk-table__cell">Arnold McKeever<br>Senior tribunal caseworker - Immigration and Asylum</td>
               </tr>
 <!--
               <tr class="govuk-table__row">
