--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -115,10 +115,10 @@ GOV.UK Prototype Kit
 
         <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
         <p><a target="_blank" href="/caseaccess/pages/booking?usertype=judiciary&">Booking UI</a><br>Select type of access</br></p>
-        <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p>
+      <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=judiciary&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
         <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=judiciary&">Booking UI</a><br>Return post logout - single</br></p>
-            <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=judiciary&">Booking UI</a><br>Return post logout - multi</br></p>
-      <!--  <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=judiciary&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
+    <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=judiciary&">Booking UI</a><br>Return post logout - multi</br></p>
+       <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=judiciary&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
     -->  </div>
 
       <!-- STAFF -->
@@ -221,10 +221,10 @@ GOV.UK Prototype Kit
 
           <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
           <p><a target="_blank" href="/caseaccess/pages/booking?usertype=staff&">Booking UI</a><br>Select type of access</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p>
+        <!--  <p><a target="_blank" href="/caseaccess/pages/booking-location?usertype=staff&">Booking UI - location</a><br>Select location- Subject to change</br></p> -->
           <p><a target="_blank" href="/caseaccess/pages/booking-rtn?usertype=staff&">Booking UI</a><br>Return post logout - single</br></p>
-              <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
-      <!--    <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=staff&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
+      <!--         <p><a target="_blank" href="/caseaccess/pages/booking-rtn-multi?usertype=staff&">Booking UI</a><br>Return post logout - multi</br></p>
+         <p><a target="_blank" href="/caseaccess/pages/booking-combo?usertype=staff&">Booking UI - Combo</a><br>Alternative design - both screesn combined</br></p>
       -->  </div>
       </div>
     </div>
