--- a/app/views/caseaccess/pages/mywork-opt2.html
+++ b/app/views/caseaccess/pages/mywork-opt2.html
@@ -22,22 +22,22 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page" href="mywork">
+              <a class="hmcts-sub-navigation__link" aria-current="page" href="mywork-opt2">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="available-tasks-opt2">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mycases">
+              <a class="hmcts-sub-navigation__link" href="mycases-opt2">
                 My cases
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="myaccess-p">
+              <a class="hmcts-sub-navigation__link" href="myaccess-p-opt2">
                 My access
               </a>
             </li>
