--- a/app/views/caseaccess/pages/booking-rtn.html
+++ b/app/views/caseaccess/pages/booking-rtn.html
@@ -11,37 +11,36 @@ Case details
 
 
 
-    <form action="#" method="post" onsubmit="usePage(this, 'bob');">
-      <div class="govuk-form-group">
-        <fieldset class="govuk-fieldset">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-            <h1 class="govuk-fieldset__heading">
-              Select your purpose of work today
-            </h1>
-          </legend>
-
-          <div class="govuk-radios">
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-3" name="bob" type="radio" value="/caseaccess/pages/mywork">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                Continue with my existing booking [Value]
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                Booked to sit at a specific location
-              </label>
-            </div>
-            <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
-              <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-                Access my work
-              </label>
-            </div>
-          </div>
-        </fieldset>
+<form action="#" method="post" onsubmit="usePage(this, 'bob');">
+  <div class="govuk-form-group">
+    <fieldset class="govuk-fieldset">
+      <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+        <h1 class="govuk-fieldset__heading">
+          Select your purpose of work today
+        </h1>
+      </legend>
+      <div class="govuk-radios">
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location-opt1">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live">
+            Start new booking
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/booking-location-opt2">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            Access my work
+          </label>
+        </div>
+        <div class="govuk-radios__item">
+          <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
+          <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+            Continue with existing booking
+          </label>
+        </div>
       </div>
+    </fieldset>
+  </div>
     <div class="govuk-button-group">
     {{ govukButton({
       text: "Continue",
