--- a/app/views/caseaccess/pages/booking.html
+++ b/app/views/caseaccess/pages/booking.html
@@ -21,17 +21,23 @@ Case details
           </legend>
           <div class="govuk-radios">
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location">
+              <input class="govuk-radios__input" id="where-do-you-live" name="bob" type="radio" value="/caseaccess/pages/booking-location-opt1">
               <label class="govuk-label govuk-radios__label" for="where-do-you-live">
-                Booked to sit at a specific location
+                Start new booking
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
+              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/booking-location-opt2">
               <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
                 Access my work
               </label>
             </div>
+        <!--    <div class="govuk-radios__item">
+              <input class="govuk-radios__input" id="where-do-you-live-2" name="bob" type="radio" value="/caseaccess/pages/mywork">
+              <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
+                Continue with existing booking
+              </label>
+            </div> -->
           </div>
         </fieldset>
       </div>
