--- a/app/views/caseaccess/pages/myaccess-p-opt2.html
+++ b/app/views/caseaccess/pages/myaccess-p-opt2.html
@@ -22,23 +22,23 @@ My work
         <nav class="hmcts-sub-navigation">
           <ul class="hmcts-sub-navigation__list">
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="mywork">
+              <a class="hmcts-sub-navigation__link" href="mywork-opt2">
                 My tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" href="available-tasks">
+              <a class="hmcts-sub-navigation__link" href="available-tasks-opt2">
                 Available tasks
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link"  href="mycases-p">
-                My cases <!-- <span class="xui-alert-link__number"> 1 </span> -->
+              <a class="hmcts-sub-navigation__link" href="mycases-opt2">
+                My cases
               </a>
             </li>
             <li class="hmcts-sub-navigation__item">
-              <a class="hmcts-sub-navigation__link" aria-current="page"  href="myaccess-p">
-                My access <!-- <span class="xui-alert-link__number"> 1 </span> -->
+              <a class="hmcts-sub-navigation__link" aria-current="page" href="myaccess-p-opt2">
+                My access
               </a>
             </li>
           </ul>
