--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Work allocation prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (15/4/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
+      Last updated (22/4/20) <br><br>SUBJECT TO CHANGE - ERROR STATES TO BE ADDED
     </h2>
     <div style="display: flex; margin-top: 80px;">
 
@@ -195,6 +195,22 @@ GOV.UK Prototype Kit
   <p><a target="_blank" href="/workallocation/pages/wa-cases-real-chk?usertype=judiciary&">All work - tab - Cases - Reassign - Check your changes</a><br>Checked with v3.2</p>
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-jb-r?usertype=judiciary&">All work - tab - Cases - task complete</a><br>Checked with v3.2</p>
   <p><a target="_blank" href="/workallocation/pages/wa-allwork-cases-r?usertype=judiciary&">All work - tab - Cases - all cases </a><br>Checked with v3.2</p>
+
+
+  <h2 class="govuk-heading-m">ALL WORK OTHER FEATURES </h2>
+
+  <div class="govuk-!-padding-bottom-6"></div>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-o?usertype=judiciary&">Launch page</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/mark-as-done?usertype=judiciary&">Mark a task as done</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/cancel-task?usertype=judiciary&">Cancel a task</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/assign-task?usertype=judiciary&">Assign a task</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=judiciary&">Unassign a task</a><br>Checked with v3.2</p>
+
+
+
+
+
+
 
   </div>
 
