--- a/app/views/workallocation/pages/wa-allwork-sp-mad.html
+++ b/app/views/workallocation/pages/wa-allwork-sp-mad.html
@@ -12,7 +12,17 @@ My work
     max-width: 1820px;
   }
 </style>
+<div class="hmcts-banner hmcts-banner--success">
+  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
+  </svg>
+  <div class="hmcts-banner__message">
+    <span class="hmcts-banner__assistive">Success</span>
+    You've marked a task as done. It has been removed from the task list.
+  </div>
+</div>
 <div class="govuk-width-container">
+
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
       <h1 class="govuk-heading-xl">All work</h1>
@@ -135,7 +145,7 @@ My work
           </div>
         </div>
         <div class="hmcts-filter-layout__content">
-          <p class="govuk-body">Displaying <strong>4</strong> of <strong>7</strong> tasks</p>
+          <p class="govuk-body">Displaying <strong>3</strong> of <strong>6</strong> tasks</p>
           <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -196,29 +206,24 @@ My work
                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a v href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
               </tr>
 
-
+<!--
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Hudson Remi</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Protection</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff" >Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25" path
                     style="fill: black">
                     <title>This case has more than one task. Review needed.</title>
                     <path d="M13.7,18.5h-2.4v-2.4h2.4V18.5z M12.5,13.7c-0.7,0-1.2-0.5-1.2-1.2V7.7c0-0.7,0.5-1.2,1.2-1.2s1.2,0.5,1.2,1.2v4.8
                                               C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" />
                   </svg></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Generate decision and reasons</a></td>
-                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">{{govukTag ({text: "dd/mm/yyyy",
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Generate decision and reasons</a></td>
+                <td class="govuk-table__cell">{{govukTag ({text: "dd/mm/yyyy",
                                               classes: "govuk-tag--grey"
                                             })}} </td>
-                                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Judge Beech</td>
-                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-sp" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
-              </tr>
-              <tr class="govuk-table__row">
-
-                <td colspan="8" class="right"><a href="mark-as-done" class="right">Mark as done</a> <a href="cancel-task" class="right">Cancel task</a> <a href="reassign-t" class="right">Reassign</a> <a href="unassign-task" class="right">Unassign</a> <a href="#" class="right_tl">Go to tasks</a></td>
-              </tr>
-
+                                            <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Judge Beech</td>
+                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-sp-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+              </tr> -->
             </tbody>
           </table>
         </div>
