--- a/app/views/workallocation/pages/wa-allwork-sp.html
+++ b/app/views/workallocation/pages/wa-allwork-sp.html
@@ -94,7 +94,7 @@ My work
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="person-2" name="bob" type="radio" value="/workallocation/pages/wa-allwork-none">
         <label class="govuk-label govuk-radios__label" for="where-do-you-live-2">
-          None / unassigned tasks
+          None / available tasks
         </label>
       </div>
       <div class="govuk-radios__item">
