--- a/app/views/workallocation/index.html
+++ b/app/views/workallocation/index.html
@@ -200,11 +200,13 @@ GOV.UK Prototype Kit
   <h2 class="govuk-heading-m">ALL WORK OTHER FEATURES </h2>
 
   <div class="govuk-!-padding-bottom-6"></div>
-    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-o?usertype=judiciary&">Launch page</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/wa-allwork-sp-o?usertype=judiciary&">Launch page - assigned</a><br>Checked with v3.2</p>
   <p><a target="_blank" href="/workallocation/pages/mark-as-done?usertype=judiciary&">Mark a task as done</a><br>Checked with v3.2</p>
   <p><a target="_blank" href="/workallocation/pages/cancel-task?usertype=judiciary&">Cancel a task</a><br>Checked with v3.2</p>
+    <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=judiciary&">Unassign a task</a><br>Checked with v3.2</p>
+  <p><a target="_blank" href="/workallocation/pages/wa-allwork-none-o?usertype=judiciary&">Launch page - unassigned</a><br>Checked with v3.2</p>
   <p><a target="_blank" href="/workallocation/pages/assign-task?usertype=judiciary&">Assign a task</a><br>Checked with v3.2</p>
-  <p><a target="_blank" href="/workallocation/pages/unassign-task?usertype=judiciary&">Unassign a task</a><br>Checked with v3.2</p>
+
 
 
 
