--- a/app/views/workallocation/pages/wa-allwork-none-at.html
+++ b/app/views/workallocation/pages/wa-allwork-none-at.html
@@ -12,6 +12,15 @@ My work
     max-width: 1820px;
   }
 </style>
+<div class="hmcts-banner hmcts-banner--success">
+  <svg class="hmcts-banner__icon" fill="currentColor" role="presentation" focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 25 25" height="25" width="25">
+    <path d="M25,6.2L8.7,23.2L0,14.1l4-4.2l4.7,4.9L21,2L25,6.2z" />
+  </svg>
+  <div class="hmcts-banner__message">
+    <span class="hmcts-banner__assistive">Success</span>
+    You've assigned a task. It will be in the selected person's My tasks.
+  </div>
+</div>
 <div class="govuk-width-container">
   <div class="hmcts-page-heading">
     <div class="hmcts-page-heading__title">
@@ -135,7 +144,7 @@ My work
           </div>
         </div>
         <div class="hmcts-filter-layout__content">
-          <p class="govuk-body">Displaying <strong>2</strong> of <strong>7</strong> tasks</p>
+          <p class="govuk-body">Displaying <strong>1</strong> of <strong>7</strong> tasks</p>
           <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
@@ -152,21 +161,6 @@ My work
             <tbody class="govuk-table__body">
 
 
-
-
-              <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Alessandra  Mccormack</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
-                        text: "dd/mm/yyyy",
-                        classes: "govuk-tag--yellow"
-                      })}}</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-none-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-              </tr>
 
               <tr class="govuk-table__row">
                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Rayhan  Turner</a></td>
