--- a/app/views/workallocation/pages/wa-allwork-none-o.html
+++ b/app/views/workallocation/pages/wa-allwork-none-o.html
@@ -155,17 +155,21 @@ My work
 
 
               <tr class="govuk-table__row">
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Alessandra  Mccormack</a></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Taylor House</td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
-                <td class="govuk-table__cell"> {{govukTag({
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Alessandra  Mccormack</a></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">HR</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff">Taylor House</td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+                <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"><a href="#">Review respondent evidence</a></td>
+                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff"> {{govukTag({
                         text: "dd/mm/yyyy",
                         classes: "govuk-tag--yellow"
                       })}}</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-none-o" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19" style="border-bottom: 1px solid #fff"></td>
+                <td class="govuk-table__cell" style="border-bottom: 1px solid #fff">&nbsp;&nbsp;&nbsp;<a href="wa-allwork-none" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
+              </tr>
+              <tr class="govuk-table__row">
+
+                <td colspan="8" class="right"><a href="#" class="right">Mark as done</a> <a href="#" class="right">Cancel task</a> <a href="assign-task" class="right">Assign</a>  <a href="#" class="#">Go to tasks</a></td>
               </tr>
 
               <tr class="govuk-table__row">
